# nogine

./: .gitmodules  Cargo.toml  README.md  build.rs
examples/: audio_channels.rs  audio_playing.rs  blending_modes.rs  blit_effect.rs  controller.rs  custom_shader.rs  figures.rs  forced_framerate.rs  fullscreen_toggle.rs  integer_scaling.rs  keys.rs  lines.rs  mouse_pos.rs  multi_render_target.rs  naive_blur.rs  pivots.rs  random.rs  render_scope.rs  spatial_audio.rs  sprite_drawing.rs  stereo_audio.rs  text.rs  texture_drawing.rs  ui.rs  ui_origins.rs  uv_screen.rs  white_square.rs  window.rs
examples/res/: invert_blit.frag
src/: color.rs  context.rs  input.rs  lib.rs  logging.rs  math.rs  resource.rs  window.rs
src/audio/: al.rs  channels.rs  clip.rs  mod.rs
src/audio/al_bindings/: buffer.rs  context.rs  device.rs  mod.rs  source.rs
src/graphics/: batch.rs  buffers.rs  consts.rs  defaults.rs  gfx.rs  material.rs  mod.rs  pipeline.rs  render_scope.rs  shader.rs  texture.rs  ui.rs  uniforms.rs  verts.rs
src/graphics/gl_bindings/: buffer.rs  gl.rs  mod.rs  program.rs  shader.rs  vao.rs
src/graphics/texture/: atlasgen.rs  mod.rs
src/inline/: def_blit_shader.frag  def_blit_shader.vert  def_ellipse_shader.frag  def_ellipse_vert_shader.glsl  def_plain_shader.vert  def_rect_frag_shader.glsl  def_rect_vert_shader.glsl  def_tex_frag_shader.glsl  def_tex_shader.frag
src/input/: controller.rs  controller_mapping.rs  mod.rs
src/math/: mat3x3.rs  mod.rs  quad.rs  rect.rs  rotrect.rs  vector2.rs  vector3.rs
src/utils/: heap.rs  ptr_slice.rs  rng.rs  timer.rs
(+3 files in other folders)
