[package]
name = "nogine"
version = "0.3.2"
edition = "2021"
readme = "README.md"
repository = "https://github.com/JustMel69/nogine"
license = "MIT"


[dependencies]
colored = "2.0.4"
fontdue = "0.8.0"
gl = "0.14.0"
glfw = "0.52.0"
image = "0.24.7"
rodio = { version = "0.17.1", default-features = false, features = ["wav"] }
thiserror = "1.0.48"
ttf-parser = "0.20.0"
uuid = { version = "1.4.1", features = ["v4"] }
gamedev-math = { git = "https://github.com/JustMel69/gamedev-math.git" }

[features]
gl_debug = []
